--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 .container{
 	background-color:#D3D3D3;
 	padding:10px;
+}
+ul{
 	display:flex;
 }
 li{
 	list-style:none;
-	display:inline;
+	display:inline; 
 	margin-right:1rem;
-}
+} 
